--- a/.env
+++ b/.env
@@ -75,5 +75,5 @@ SHOPIFY_API_SECRET=a76a088f5338228265c55d0e938c66cd
 SHOPIFY_APPBRIDGE_ENABLED=1  # Set to 1 if your app is embedded; set to 0 if your app is non-embedded
 SHOPIFY_BILLING_ENABLED=0
 SHOPIFY_API_SCOPES=read_products,write_products,read_orders,write_orders
-SHOPIFY_API_REDIRECT_URI=https://18ce-2401-4900-1c7a-9d92-11dc-d81f-2b14-2643.ngrok-free.app/authenticate
-SHOPIFY_APP_HOST_NAME=https://18ce-2401-4900-1c7a-9d92-11dc-d81f-2b14-2643.ngrok-free.app/
+SHOPIFY_API_REDIRECT_URI=https://e8b5-112-196-188-40.ngrok-free.app/authenticate
+SHOPIFY_APP_HOST_NAME=https://e8b5-112-196-188-40.ngrok-free.app/
