--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@monaco-editor/react": "^4.6.0",
         "@mui/material": "^6.1.4",
-        "@shopify/polaris": "^13.9.0",
-        "react-hot-toast": "^2.4.1"
+        "@shopify/polaris": "^13.9.1",
+        "react-hot-toast": "^2.4.1",
+        "react-table": "^7.8.0"
     }
 }
