--- a/.env
+++ b/.env
@@ -75,5 +75,5 @@ SHOPIFY_API_SECRET=a76a088f5338228265c55d0e938c66cd
 SHOPIFY_APPBRIDGE_ENABLED=1  # Set to 1 if your app is embedded; set to 0 if your app is non-embedded
 SHOPIFY_BILLING_ENABLED=0
 SHOPIFY_API_SCOPES=read_products,write_products,read_orders,write_orders
-SHOPIFY_API_REDIRECT_URI=https://e8b5-112-196-188-40.ngrok-free.app/authenticate
-SHOPIFY_APP_HOST_NAME=https://e8b5-112-196-188-40.ngrok-free.app/
+SHOPIFY_API_REDIRECT_URI=https://26b2-176-205-189-89.ngrok-free.app/authenticate
+SHOPIFY_APP_HOST_NAME=https://26b2-176-205-189-89.ngrok-free.app/
